Heavily rename model warper classes to reflect intent

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -42,7 +42,7 @@ add_library(OpenSimCreator STATIC
     Documents/MeshImporter/CrossrefDescriptor.h
     Documents/MeshImporter/CrossrefDirection.h
     Documents/MeshImporter/Document.cpp
-    Documents/MeshImporter/Document.h
+    "Documents/ModelWarper/ModelWarpDocument.h"
     Documents/MeshImporter/DocumentHelpers.cpp
     Documents/MeshImporter/DocumentHelpers.h
     Documents/MeshImporter/Ground.cpp
@@ -105,29 +105,30 @@ add_library(OpenSimCreator STATIC
 
     Documents/ModelWarper/CachedModelWarper.cpp
     Documents/ModelWarper/CachedModelWarper.h
-    Documents/ModelWarper/Document.cpp
-    Documents/ModelWarper/Document.h
-    Documents/ModelWarper/FrameWarpLookup.cpp
-    Documents/ModelWarper/FrameWarpLookup.h
+    Documents/ModelWarper/FrameWarperFactories.cpp
+    Documents/ModelWarper/FrameWarperFactories.h
     Documents/ModelWarper/ICloneable.h
-    Documents/ModelWarper/IdentityFrameWarp.h
-    Documents/ModelWarper/IDetailListable.h
-    Documents/ModelWarper/IFrameWarp.h
-    Documents/ModelWarper/IMeshWarp.h
+    Documents/ModelWarper/IdentityFrameWarperFactory.h
+    Documents/ModelWarper/IFrameWarper.h
+    Documents/ModelWarper/IFrameWarperFactory.h
     Documents/ModelWarper/InMemoryMesh.cpp
     Documents/ModelWarper/InMemoryMesh.h
     Documents/ModelWarper/IPointWarper.h
+    Documents/ModelWarper/IPointWarperFactory.h
     Documents/ModelWarper/IValidateable.cpp
     Documents/ModelWarper/IValidateable.h
-    Documents/ModelWarper/LandmarkPairing.h
-    Documents/ModelWarper/MeshWarpLookup.cpp
-    Documents/ModelWarper/MeshWarpLookup.h
+    Documents/ModelWarper/IWarpDetailProvider.h
+    Documents/ModelWarper/MaybePairedLandmark.h
     Documents/ModelWarper/ModelWarpConfiguration.cpp
     Documents/ModelWarper/ModelWarpConfiguration.h
-    Documents/ModelWarper/ThinPlateSplineMeshWarp.cpp
-    Documents/ModelWarper/ThinPlateSplineMeshWarp.h
-    Documents/ModelWarper/ValidationCheck.h
-    Documents/ModelWarper/ValidationState.h
+    Documents/ModelWarper/ModelWarpDocument.cpp
+    Documents/ModelWarper/ModelWarpDocument.h
+    Documents/ModelWarper/PointWarperFactories.cpp
+    Documents/ModelWarper/PointWarperFactories.h
+    Documents/ModelWarper/TPSLandmarkPairWarperFactory.cpp
+    Documents/ModelWarper/TPSLandmarkPairWarperFactory.h
+    Documents/ModelWarper/ValidationCheckResult.h
+    Documents/ModelWarper/ValidationCheckState.h
     Documents/ModelWarper/WarpableOpenSimComponent.h
     Documents/ModelWarper/WarpDetail.h
 
