Move IdentityFrameWarperFactory implementation to separate cpp file

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -107,6 +107,7 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/FrameWarperFactories.cpp
     Documents/ModelWarper/FrameWarperFactories.h
     Documents/ModelWarper/ICloneable.h
+    Documents/ModelWarper/IdentityFrameWarperFactory.cpp
     Documents/ModelWarper/IdentityFrameWarperFactory.h
     Documents/ModelWarper/IFrameWarper.h
     Documents/ModelWarper/IFrameWarperFactory.h
