Add MeshPhongMaterial, flesh out CSM demo a little

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -94,6 +94,8 @@ add_library(oscar STATIC
 
     Graphics/Materials/MeshBasicMaterial.cpp
     Graphics/Materials/MeshBasicMaterial.h
+    Graphics/Materials/MeshPhongMaterial.cpp
+    Graphics/Materials/MeshPhongMaterial.h
 
     Graphics/OpenGL/CPUDataTypeOpenGLTraits.h
     Graphics/OpenGL/CPUImageFormatOpenGLTraits.h
