--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -46,10 +46,12 @@ add_executable(testoscar
     Maths/TestAnalyticPlane.cpp
     Maths/TestAngle.cpp
     Maths/TestBVH.cpp
+    Maths/TestClosedInterval.cpp
     Maths/TestCommonFunctions.cpp
     Maths/TestCoordinateAxis.cpp
     Maths/TestCoordinateDirection.cpp
     Maths/TestFrustumPlanes.cpp
+    Maths/TestNormalized.cpp
     Maths/TestPlaneFunctions.cpp
     Maths/TestTransform.cpp
     Maths/TestUnitVec.cpp
@@ -96,7 +98,7 @@ add_executable(testoscar
     TestingHelpers.cpp
     TestingHelpers.h
     testoscar.cpp  # entry point
-)
+ )
 
 
 configure_file(
