Add lerp helpers for chrono types and add SimulationClocks header to ISimulation

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -360,6 +360,7 @@ add_library(oscar STATIC
     Utils/Algorithms.h
     Utils/Assertions.cpp
     Utils/Assertions.h
+    Utils/ChronoHelpers.h
     Utils/CircularBuffer.h
     Utils/ClonePtr.h
     Utils/Concepts.h
