--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -66,8 +66,8 @@ jobs:
         ./scripts/build_emscripten.sh
 
   macos11clang:
-    name: MacOS 12 (Monterey)
-    runs-on: macos-12
+    name: MacOS 13
+    runs-on: macos-13
     steps:
 
     - uses: actions/checkout@v4
