Separate 'prompt user for CSV save location' from 'write CSV' code for testing (#840)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -163,6 +163,8 @@ add_library(OpenSimCreator STATIC
     Documents/Simulation/Simulation.h
     Documents/Simulation/SimulationClock.h
     Documents/Simulation/SimulationClocks.h
+    Documents/Simulation/SimulationHelpers.cpp
+    Documents/Simulation/SimulationHelpers.h
     Documents/Simulation/SimulationModelStatePair.cpp
     Documents/Simulation/SimulationModelStatePair.h
     Documents/Simulation/SimulationReport.cpp
