Fix 'Show All' only showing for 1D data (#840)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -151,6 +151,9 @@ add_library(OpenSimCreator STATIC
     Documents/OutputExtractors/OutputExtractor.cpp
     Documents/OutputExtractors/OutputExtractor.h
     Documents/OutputExtractors/OutputExtractorDataType.h
+    Documents/OutputExtractors/OutputExtractorDataTypeHelpers.h
+    Documents/OutputExtractors/OutputExtractorDataTypeList.h
+    Documents/OutputExtractors/OutputExtractorDataTypeTraits.h
     Documents/OutputExtractors/OutputValueExtractor.h
 
     Documents/Simulation/ForwardDynamicSimulation.cpp
