--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -77,6 +77,7 @@ add_executable(testoscar
     Platform/TestResourcePath.cpp
     Platform/TestResourceStream.cpp
 
+    Shims/Cpp20/TestBit.cpp
     Shims/Cpp23/TestCstddef.cpp
 
     Utils/TestAlgorithms.cpp
