--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -279,7 +279,9 @@ add_library(oscar STATIC
     Shims/Cpp20/bit.h
     Shims/Cpp20/stop_token.h
     Shims/Cpp20/thread.h
+    Shims/Cpp23/algorithm.h
     Shims/Cpp23/cstddef.h
+    Shims/Cpp23/numeric.h
     Shims/Cpp23/ranges.h
     Shims/Cpp23/utility.h
 
