De-integrate docs from the main build

--- a/build_resources/DEV_osc.toml.in
+++ b/build_resources/DEV_osc.toml.in
@@ -12,7 +12,7 @@
 # INSTALL configuration file.
 
 resources = "@CMAKE_CURRENT_SOURCE_DIR@/../../resources"
-docs = "@CMAKE_CURRENT_SOURCE_DIR@/../../docs/build"
+docs_url = "@CMAKE_CURRENT_SOURCE_DIR@/../../docs/build/index.html"
 
 # change this if you need OSC to print more information to the log
 # log_level = "trace"  # trace < debug < info < warn < err < critical
