Reorganize project directory into a per-CMakeLists style, where possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,41 +6,6 @@ project(osc VERSION 0.5.12 LANGUAGES CXX)
 # -------------- gather user-facing build cache vars ---------------- #
 
 set(
-    OSC_USE_CLANG_TIDY OFF
-    CACHE BOOL
-    "enable/disable running `clang-tidy` (linter) while building"
-)
-set(
-    OSC_USE_IWYU OFF
-    CACHE BOOL
-    "enable/disable running `iwyu` (include-what-you-use) while building"
-)
-set(
-    OSC_IWYU_PATH "include-what-you-use"
-    CACHE STRING
-    "filepath to the `iwyu` executable (if not on the PATH)"
-)
-set(
-    OSC_FORCE_ASSERTS_ENABLED ON
-    CACHE BOOL
-    "force-enable/-disable OSC's runtime assertions - even if building a release build"
-)
-set(
-    OSC_FORCE_UNDEFINE_NDEBUG OFF
-    CACHE BOOL
-    "force-enable/disable NDEBUG - even if building a release build. Note: unlike OSC_FORCE_ASSERTS_ENABLED, this also tends to enable runtime assertions from library headers"
-)
-set(
-    OSC_USE_ASAN OFF
-    CACHE BOOL
-    "enable/disable address sanitizer (libASAN): useful for spotting memory access violations and leaks"
-)
-set(
-    OSC_DEFAULT_RESOURCE_DIR "../resources"
-    CACHE STRING
-    "the default filesystem location of installed runtime resources dir relative to the application executable when it is not specified in the user's configuration file"
-)
-set(
     OSC_REPO_URL "https://github.com/ComputationalBiomechanicsLab/opensim-creator"
     CACHE STRING
     "the internet location of the software's repo - used by in-app links, installers, etc."
@@ -99,14 +64,6 @@ set(
     CACHE BOOL
     "enable/disable building the benchmark suite (handy for development)"
 )
-set(OSC_EXECUTABLE_SUFFIX ${CMAKE_EXECUTABLE_SUFFIX}
-    CACHE BOOL
-    "global suffix to place on the end of each executable (platform-dependent)"
-)
-set(OSC_BUILD_INSTALLABLE_PACKAGE ON
-    CACHE BOOL
-    "enable/disable building installable packages (exe self-installer, .deb package, etc.)"
-)
 set(OSC_DISCOVER_TESTS ON
     CACHE BOOL
     "enable/disable automatically running test discovery (IDE integration)"
@@ -145,44 +102,12 @@ endif()
 
 # -------------- set/mutate internal vars ---------------- #
 
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_EXECUTABLE_SUFFIX ${OSC_EXECUTABLE_SUFFIX})
-
 # set LINUX
 #
 # this is based on whether the UNIX variant being used appears to be LINUX
 if(UNIX AND NOT APPLE)
     set(LINUX TRUE)
 endif()
-
-# set CMAKE_CXX_INCLUDE_WHAT_YOU_USE
-#
-# this enables CMake's in-built support for iwyu
-if(OSC_USE_IWYU)
-    set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE "${OSC_IWYU_PATH};-Xiwyu;any;-Xiwyu;iwyu;-Xiwyu;")
-endif()
-
-# set CMAKE_CXX_CLANG_TIDY
-#
-# this enables CMake's in-built support for clang-tidy
-if(OSC_USE_CLANG_TIDY)
-    set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
-endif()
-
-# handle OSC_FORCE_UNDEFINE_NDEBUG
-#
-# this unsets the relevant flags globally
-if(OSC_FORCE_UNDEFINE_NDEBUG)
-    # MSVC
-    string(REPLACE "/DNDEBUG" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
-    string(REPLACE "/DNDEBUG" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-    # others
-    string(REPLACE "-DNDEBUG" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
-    string(REPLACE "-DNDEBUG" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-endif()
-
 
 # -------------- setup top-level project state ---------------- #
 
@@ -208,9 +133,5 @@ if(${OSC_BUILD_DOCS})
 endif()
 
 if(${OSC_BUILD_BENCHMARKS})
-    add_subdirectory(benches)
-endif()
-
-if (${OSC_BUILD_INSTALLABLE_PACKAGE})
-    include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Packaging.cmake)
+    add_subdirectory(benchmarks)
 endif()
