Fix build for Linux

--- a/apps/osc/CMakeLists.txt
+++ b/apps/osc/CMakeLists.txt
@@ -58,7 +58,7 @@ set(CPACK_PACKAGE_EXECUTABLES "osc;${OSC_PACKAGE_NAME}")
 if (WIN32)
     include(${CMAKE_CURRENT_SOURCE_DIR}/Windows/Packaging.cmake)
 elseif(LINUX)
-    include(${CMAKE_CURRENT_SOURCE_DIR}/Linux/Packaging.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/Debian/Packaging.cmake)
 elseif(APPLE)
     include(${CMAKE_CURRENT_SOURCE_DIR}/MacOS/Packaging.cmake)
 endif()
