--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,8 @@
+set(OSC_DISCOVER_TESTS ON
+    CACHE BOOL
+    "enable/disable automatically running test discovery (IDE integration)"
+)
+
 if(${OSC_BUILD_OPENSIMCREATOR})
     add_subdirectory(TestOpenSimCreator)
 endif()
