Fix typos for non-EMSCRIPTEN builds

--- a/apps/hellotriangle/CMakeLists.txt
+++ b/apps/hellotriangle/CMakeLists.txt
@@ -11,7 +11,7 @@ target_link_libraries(hellotriangle PUBLIC
 # see: https://cmake.org/cmake/help/latest/manual/cmake-generator-expressions.7.html?highlight=runtime#genex:TARGET_RUNTIME_DLLS
 if (WIN32)
     add_custom_command(
-        TARGET osc
+        TARGET hellotriangle
         PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:osc> $<TARGET_FILE_DIR:osc>
         COMMAND_EXPAND_LISTS
