--- a/apps/hellotriangle/CMakeLists.txt
+++ b/apps/hellotriangle/CMakeLists.txt
@@ -13,7 +13,7 @@ if (WIN32)
     add_custom_command(
         TARGET hellotriangle
         PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:osc> $<TARGET_FILE_DIR:osc>
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:hellotriangle> $<TARGET_FILE_DIR:hellotriangle>
         COMMAND_EXPAND_LISTS
     )
 endif()
