--- a/tests/testoscar_demos/CMakeLists.txt
+++ b/tests/testoscar_demos/CMakeLists.txt
@@ -22,8 +22,14 @@ target_link_libraries(testoscar_demos PUBLIC
     GTest::gtest_main
 )
 
-# tell CMake (+IDEs) how to find all tests
-gtest_discover_tests(testoscar_demos)
+set_target_properties(testoscar_demos PROPERTIES
+    CXX_EXTENSIONS OFF
+    CXX_STANDARD_REQUIRED ON
+)
+
+if(${OSC_DISCOVER_TESTS})
+    gtest_discover_tests(testoscar_demos)
+endif()
 
 # for development on Windows, copy all runtime dlls to the exe directory
 # (because Windows doesn't have an RPATH)
